# sample-hunter

./: .gitignore  README.md  _data.tar.xz  double_check.sh  get_fingerprints.sh  memray-flamegraph-output.html  memray-table-output.html  pyproject.toml  requirements.txt  sample_hunter.ipynb
configs/: 7_14_2025.yaml  7_15_2025.yaml  7_16_2025.yaml  7_16_2025b.yaml  7_17_2025.yaml  7_18_2025.yaml  7_19_2025.yaml  7_8_2025.yaml  7_9_2025.yaml  dev_train_cpu.yaml  preprocess_8_19_2025.yaml  preprocess_8_6_2025.yaml  train_7_25_2025.yaml  train_7_29_2025.yaml  train_7_30_2025.yaml  train_8_12_2025.yaml  train_8_19_2025.yaml  train_8_19_2025b.yaml  train_8_1_2025.yaml  train_8_20_2025.yaml  train_8_28_2025.yaml  train_8_29_2025.yaml  train_8_2_2025.yaml  train_8_4_2025.yaml  train_8_5_2025.yaml  train_9_11_2025.yaml  train_9_15_2025.yaml  train_9_1_2025.yaml  train_9_1_2025b.yaml  train_9_3_2025.yaml  train_9_3_2025b.yaml  train_9_4_2025.yaml  train_9_5_2025.yaml  train_9_5_2025b.yaml  train_9_5_2025c.yaml  train_9_7_2025.yaml
sample_hunter/: __init__.py  _util.py  cfg.py  config.py  config.yaml
sample_hunter/data_wrangling/: archive.tar.xz  build_wds.py  calibrate_quantization.py  debug.py  delete_duplicates.py  get_yt_url.py  make_dataset.py  make_spotify_playlist.py  models.py  obfuscate.py  prepare_dataset.py  preprocess_offline.py  preprocess_sample_sets.py  setup_validation.py  spotify_api.py  spotify_auth.py  spotify_to_youtube.py  yt_to_mp3.py
sample_hunter/pipeline/: build_index.py  colab.py  data_loading.py  dataset.py  encoder.py  encoder_net.py  evaluate.py  get_toy_sample.py  handler.py  make_qdrant.py  pipeline.py  predict.py  qdrant_test_basic.py  song_dataset.py  song_pairs_dataset.py  train.py  train_dataloader.py  transformations.py  triplet_loss.py  validate.py
sample_hunter/pipeline/transformations/: batched_pitch_perturbation.py  batched_time_stretch_perturbation.py  functional.py  my_musan.py  obfuscator.py  (+4 more)
sample_hunter/scraper/: __init__.py  artists.txt  build_query_list.py  clean_duplicates.py  driver_context.py  get_pages.py  get_ytmusic_url.py  query_list.csv  query_list_with_urls.csv  tar_handler.py  test_tor.py  yt_to_mp3.py
scraper/: __init__.py  _util.py  get_pages.py  test_tor.py
