[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "http-request-randomizer>=1.3.2",
    "lxml>=5.4.0",
    "numpy>=2.2.6",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "stem>=1.8.2",
    "tbselenium>=0.9.0",
    "tqdm>=4.67.1",
]
